added styles and markup

--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="icon" href="assets/img/tmp_logo1.png">
+    <link rel="icon" href="assets/img/logo.jpg">
     <!--<link href="https://fonts.googleapis.com/css?family=Sunflower:300,500,700" rel="stylesheet">-->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -16,59 +16,68 @@
     <div class="page-wrapper">
         <section id="header">
             <div class="logo-wrapper">
-                <img src="assets/img/tmp_logo1.png" alt="achowba">
+                <img src="assets/img/logo.jpg" alt="achowba">
             </div>
-            <div class="menu">
+            <!--<div class="menu">
                 <ul class="menu-list">
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">CONTACT</a></li>
                     <li><a href="#">RESUME</a></li>
                 </ul>
-            </div>
+            </div>-->
         </section>
         <section id="about">
             <h2 class="section__header">ABOUT ME</h2>
             <p class="about__text">
                 I am <b>Atauba Prince Mfon</b>. I am a Software Developer.
                 I love using technologies such as PHP, React and Node to make the web accessible to users by developing web applications.
-                I am currently looking to further my studies at <i>Insert University Name</i>.
+                I am currently looking to further my studies at university. <br>
+                <b>I am an avid Real Madrid fan.</b>
             </p>
         </section>
         <section id="works">
-            <h2 class="section__header">WHAT I HAVE DONE</h2>
+            <h2 class="section__header">WHAT I HAVE DONE?</h2>
             <div class="projects">
                 <div class="project">
                     <div class="project-info-wrapper">
-                        <p class="project__name">SONOS</p>
+                        <p class="project__name">Node Rest API</p>
                         <p class="project__info__text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus accusantium at atque cumque,
-                            deleniti distinctio dolore eligendi enim expedita.
+                            An authenticated REST APi built with Node JS, Express and MongoDB. Source code <a href="https://github.com/achowba/node-rest">here</a>.
                         </p>
                     </div>
                 </div>
                 <div class="project">
                     <div class="project-info-wrapper">
-                        <p class="project__name">SONOS</p>
+                        <p class="project__name">Sported</p>
                         <p class="project__info__text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus accusantium at atque cumque,
-                            deleniti distinctio dolore eligendi enim expedita.
+                            A football news app built with React JS and <a href="https://newsapi.org/" target="_blank" rel="noopener">the News API</a>. It is hosted here and source code is
+                            <a href="https://github.com/achowba/sported" target="_blank" rel="noopener">here</a>.
                         </p>
                     </div>
                 </div>
                 <div class="project">
                     <div class="project-info-wrapper">
-                        <p class="project__name">SONOS</p>
+                        <p class="project__name">P8ntr</p>
                         <p class="project__info__text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus accusantium at atque cumque,
-                            deleniti distinctio dolore eligendi enim expedita.
+                            A painting webpage built with HTML5 Canvas API. Learnt from <a href="https://javascript30.com/">Wes Bos's Javascript 30 Course</a>. Take a look at it <a href="https://achowba.github.io/p8ntr/index.html" target="_blank">here</a>.
+                        </p>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-info-wrapper">
+                        <p class="project__name">Sonos</p>
+                        <p class="project__info__text">
+                            A web application built with React JS that consumes data from a JSON file.
+                            It is hosted <a href="https://gbedu.herokuapp.com/" target="_blank" rel="noopener">here</a> and take a look at the source code
+                            <a href="https://github.com/achowba/sonos" target="_blank" rel="noopener">here</a>.
                         </p>
                     </div>
                 </div>
             </div>
         </section>
         <section id="contacts">
-            <h2 class="section__header">CONTACT ME</h2>
-            <p>You can here from me <a href="#">here</a>, <a href="#">here</a>, <a href="#">here</a> and <a href="#">here</a> </p>
+            <h2 class="section__header">WANT TO CONTACT ME?</h2>
+            <p class="contact__text">You can find me on twitter <a href="https://twitter.com/achowba_" target="_blank" rel="noopener">here</a>,
+                or look at my codes <a href="https://github.com/achowba" target="_blank" rel="noopener">here</a>,
+                or view my pictures <a href="https://instagram.com/achowba" target="_blank" rel="noopener">here</a></p>
         </section>
     </div>
 </body>
