--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="icon" href="assets/img/logo.jpg">
+    <link rel="icon" href="assets/img/logo.png">
     <!--<link href="https://fonts.googleapis.com/css?family=Sunflower:300,500,700" rel="stylesheet">-->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -16,7 +16,7 @@
     <div class="page-wrapper">
         <section id="header">
             <div class="logo-wrapper">
-                <img src="assets/img/logo.jpg" alt="achowba">
+                <img src="assets/img/logo.png" alt="achowba">
             </div>
             <!--<div class="menu">
                 <ul class="menu-list">
