--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <!--<link href="https://fonts.googleapis.com/css?family=Sunflower:300,500,700" rel="stylesheet">-->
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>achowba</title>
+    <title>achowba 👑</title>
 </head>
 <body>
     <div class="page-wrapper">
         <section id="header">
             <div class="logo-wrapper">
-                <img src="assets/img/logo.png" alt="achowba">
+                <img src="assets/img/logo_bw.png" alt="achowba">
             </div>
             <!--<div class="menu">
                 <ul class="menu-list">
@@ -28,9 +28,9 @@
             <h2 class="section__header">ABOUT ME</h2>
             <p class="about__text">
                 I am <b>Atauba Prince Mfon</b>. I am a Software Developer.
-                I love using technologies such as PHP, React and Node to make the web accessible to users by developing web applications.
-                I am currently looking to further my studies at university. <br>
-                <b>I am an avid Real Madrid fan.</b>
+                I love using technologies such as PHP, React and Node to make the web accessible to users by developing web applications. 
+                I am also interested in Mobile Technologies such as Dart/Flutter.
+                Currently a student at Middlesex University. I am also a Real Madrid fan by day and a Real Madrid fan by night.
             </p>
         </section>
         <section id="works">
@@ -38,15 +38,15 @@
             <div class="projects">
                 <div class="project">
                     <div class="project-info-wrapper">
-                        <p class="project__name">Node Rest API</p>
+                        <p class="project__name">Node Rest API 💤</p>
                         <p class="project__info__text">
-                            An authenticated REST APi built with Node JS, Express and MongoDB. Source code <a href="https://github.com/achowba/node-rest">here</a>.
+                            An authenticated REST API built with Node JS, Express and MongoDB. Source code <a href="https://github.com/achowba/node-rest">here</a>.
                         </p>
                     </div>
                 </div>
                 <div class="project">
                     <div class="project-info-wrapper">
-                        <p class="project__name">Sported</p>
+                        <p class="project__name">Sported ⚽</p>
                         <p class="project__info__text">
                             A football news app built with React JS and <a href="https://newsapi.org/" target="_blank" rel="noopener">the News API</a>. It is hosted here and source code is
                             <a href="https://github.com/achowba/sported" target="_blank" rel="noopener">here</a>.
@@ -55,7 +55,7 @@
                 </div>
                 <div class="project">
                     <div class="project-info-wrapper">
-                        <p class="project__name">P8ntr</p>
+                        <p class="project__name">P8ntr 🖌</p>
                         <p class="project__info__text">
                             A painting webpage built with HTML5 Canvas API. Learnt from <a href="https://javascript30.com/">Wes Bos's Javascript 30 Course</a>. Take a look at it <a href="https://achowba.github.io/p8ntr/index.html" target="_blank">here</a>.
                         </p>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="project">
                     <div class="project-info-wrapper">
-                        <p class="project__name">Sonos</p>
+                        <p class="project__name">Sonos 🎶</p>
                         <p class="project__info__text">
                             A web application built with React JS that consumes data from a JSON file.
                             It is hosted <a href="https://gbedu.herokuapp.com/" target="_blank" rel="noopener">here</a> and take a look at the source code
@@ -71,13 +71,26 @@
                         </p>
                     </div>
                 </div>
+                <div class="project">
+                    <div class="project-info-wrapper">
+                        <p class="project__name">UniRide 🚗</p>
+                        <p class="project__info__text">
+                            This is a school project I and a team worked on designing the User Interface for a ride sharing service for students.
+                            We carried out User Research, prototyping and also did user testing in order to come up with a UI which can be viewed
+                            <a href="https://www.figma.com/proto/W92eXMqwyOXE60zHm5XCRFzm/Uniride-App?node-id=2%3A1&viewport=754%2C-2398%2C0.939739&scaling=scale-down" target="_blank" rel="noopener">here</a>.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="contacts">
             <h2 class="section__header">WANT TO CONTACT ME?</h2>
-            <p class="contact__text">You can find me on twitter <a href="https://twitter.com/achowba_" target="_blank" rel="noopener">here</a>,
-                or look at my codes <a href="https://github.com/achowba" target="_blank" rel="noopener">here</a>,
-                or view my pictures <a href="https://instagram.com/achowba" target="_blank" rel="noopener">here</a></p>
+            <p class="contact__text">
+                You can find me on <a href="https://twitter.com/achowba_" target="_blank" rel="noopener">twitter</a>.
+                Look at my projects on <a href="https://github.com/achowba" target="_blank" rel="noopener">github</a>.
+                See my writings <a href="https://dev.to/achowba" target="_blank" rel="noopener">here</a>.
+                You can view my pictures <a href="https://vsco.co/achowba" target="_blank" rel="noopener">here</a>.
+            </p>
         </section>
     </div>
 </body>
