--- a/index.html
+++ b/index.html
@@ -6,17 +6,30 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="icon" href="assets/img/logo.png">
-    <!--<link href="https://fonts.googleapis.com/css?family=Sunflower:300,500,700" rel="stylesheet">-->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/pwa/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/pwa/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/pwa/favicon-16x16.png">
+    <link rel="manifest" href="assets/pwa/site.webmanifest">
+    <link rel="mask-icon" href="assets/pwa/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#ffc401">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="icon" href="assets/img/favicon.ico">
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>achowba 👑</title>
 </head>
 <body>
     <div class="page-wrapper">
+        <div class="toggle-button">
+            <div class="checkbox">
+                <input id="toggleDarkMode" type="checkbox"/>
+                <label></label>
+            </div>
+        </div>
         <section id="header">
             <div class="logo-wrapper">
-                <img src="assets/img/logo_bw.png" alt="achowba">
+                <img src="assets/img/logo_dark.png" id="logo" alt="achowba">
             </div>
             <!--<div class="menu">
                 <ul class="menu-list">
@@ -93,5 +106,7 @@
             </p>
         </section>
     </div>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
