edit links and change bg color

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <h2 class="section__header">ABOUT ME</h2>
             <p class="about__text">
                 I am <b>Atauba Prince Mfon</b>. I am a Software Developer.
-                I love using technologies such as PHP, React and Node to make the web accessible to users by developing web applications. 
+                I love using technologies such as Javascript (React, Angular and Node) to make the web accessible to users by developing web applications.
                 I am also interested in Mobile Technologies such as Dart/Flutter.
-                Currently a student at Middlesex University. I am also a Real Madrid fan by day and a Real Madrid fan by night.
+                I am currently a student at Middlesex University and also an intern at <a href="https://oilserv.com/" target="_blank" rel="noopener" class="intern-at">OilServ</a>. I am also a Real Madrid fan by day and a Real Madrid fan by night.
             </p>
         </section>
         <section id="works">
@@ -61,7 +61,7 @@
                     <div class="project-info-wrapper">
                         <p class="project__name">Sported ⚽</p>
                         <p class="project__info__text">
-                            A football news app built with React JS and <a href="https://newsapi.org/" target="_blank" rel="noopener">the News API</a>. It is hosted here and source code is
+                            A football news app built with React JS and <a href="https://newsapi.org/" target="_blank" rel="noopener">the News API</a>. It is hosted <a href="https://softsport.herokuapp.com/" target="_blank" rel="noopener">here</a> and source code is
                             <a href="https://github.com/achowba/sported" target="_blank" rel="noopener">here</a>.
                         </p>
                     </div>
@@ -89,8 +89,8 @@
                         <p class="project__name">UniRide 🚗</p>
                         <p class="project__info__text">
                             This is a school project I and a team worked on designing the User Interface for a ride sharing service for students.
-                            We carried out User Research, prototyping and also did user testing in order to come up with a UI which can be viewed
-                            <a href="https://www.figma.com/proto/W92eXMqwyOXE60zHm5XCRFzm/Uniride-App?node-id=2%3A1&viewport=754%2C-2398%2C0.939739&scaling=scale-down" target="_blank" rel="noopener">here</a>.
+                            We carried out User Research, prototyping and User Testing in order to come up with a UI which can be viewed
+                            <a href="https://www.figma.com/proto/sgP8tMx0fT1ibQnUhHPFtK/Uniride-App-V2?node-id=2%3A1&scaling=scale-down" target="_blank" rel="noopener">here</a>.
                         </p>
                     </div>
                 </div>
@@ -99,10 +99,12 @@
         <section id="contacts">
             <h2 class="section__header">WANT TO CONTACT ME?</h2>
             <p class="contact__text">
-                You can find me on <a href="https://twitter.com/achowba_" target="_blank" rel="noopener">twitter</a>.
+                You can find me on <a href="https://twitter.com/achowba_" target="_blank" rel="noopener">twitter</a>
+                or <a href="https://www.linkedin.com/in/achowba/" target="_blank" rel="noopener">linkedin</a>.
                 Look at my projects on <a href="https://github.com/achowba" target="_blank" rel="noopener">github</a>.
-                See my writings <a href="https://dev.to/achowba" target="_blank" rel="noopener">here</a>.
-                You can view my pictures <a href="https://vsco.co/achowba" target="_blank" rel="noopener">here</a>.
+                See my writings on <a href="https://dev.to/achowba" target="_blank" rel="noopener">dev.to</a>
+                or view my pictures on <a href="https://vsco.co/achowba" target="_blank" rel="noopener">vsco</a> or <a href="https://instagram.com/achowba" target="_blank" rel="noopener">instagram.</a>
+                Just send a <a href="mailto:princeatauba@gmail.com" target="_blank" rel="noopener">raven.</a>
             </p>
         </section>
     </div>
