--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/pwa/apple-touch-icon.png">
@@ -31,11 +30,11 @@
             <div class="logo-wrapper">
                 <img src="assets/img/logo_dark.png" id="logo" alt="achowba">
             </div>
-            <!--<div class="menu">
+            <div class="menu">
                 <ul class="menu-list">
-                    <li><a href="#">RESUME</a></li>
+                    <li><a href="assets/docs/Prince_Atauba_-_Web_Developer.pdf" target="_blank" rel="noopener">RESUME</a></li>
                 </ul>
-            </div>-->
+            </div>
         </section>
         <section id="about">
             <h2 class="section__header">ABOUT ME</h2>
@@ -43,7 +42,7 @@
                 I am <b>Atauba Prince Mfon</b>. I am a Software Developer.
                 I love using technologies such as Javascript (React, Angular and Node) to make the web accessible to users by developing web applications.
                 I am also interested in Mobile Technologies such as Dart/Flutter.
-                I am currently a student at Middlesex University and also an intern at <a href="https://oilserv.com/" target="_blank" rel="noopener" class="intern-at">OilServ</a>. I am also a Real Madrid fan by day and a Real Madrid fan by night.
+                I am a graduate of Middlesex University and also an intern at <a href="https://oilserv.com/" target="_blank" rel="noopener" class="intern-at">OilServ</a>. I am also a Real Madrid fan by day and a Real Madrid fan by night.
             </p>
         </section>
         <section id="works">
@@ -51,9 +50,28 @@
             <div class="projects">
                 <div class="project">
                     <div class="project-info-wrapper">
-                        <p class="project__name">Node Rest API 💤</p>
+                        <p class="project__name">Planit 📋</p>
                         <p class="project__info__text">
-                            An authenticated REST API built with Node JS, Express and MongoDB. Source code <a href="https://github.com/achowba/node-rest">here</a>.
+                            A todo app made with Node JS, Express, Angular and MongoDB. It is hosted <a href="https://plahnit.herokuapp.com/" target="_blank" rel="noopener">here</a>.
+                        </p>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-info-wrapper">
+                        <p class="project__name">Pause and Play 📺</p>
+                        <p class="project__info__text">
+                            A Google Chrome extension that automatically pauses a YouTube video when the tab is switched or browser is minimized and plays it when the tab is back in focus.
+                            Download it <a href="https://chrome.google.com/webstore/detail/pause-and-play/pcmpjndicegnhilonlfbjcpmgaecedoa" target="_blank" rel="noopener">here</a>.
+                        </p>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-info-wrapper">
+                        <p class="project__name">UniRide 🚗</p>
+                        <p class="project__info__text">
+                            This is a school project I and a team worked on designing the User Interface for a ride sharing service for students.
+                            We carried out User Research, prototyping and User Testing in order to come up with a UI which can be viewed
+                            <a href="https://www.figma.com/proto/sgP8tMx0fT1ibQnUhHPFtK/Uniride-App-V2?node-id=2%3A1&scaling=scale-down" target="_blank" rel="noopener">here</a>.
                         </p>
                     </div>
                 </div>
@@ -81,16 +99,6 @@
                             A web application built with React JS that consumes data from a JSON file.
                             It is hosted <a href="https://gbedu.herokuapp.com/" target="_blank" rel="noopener">here</a> and take a look at the source code
                             <a href="https://github.com/achowba/sonos" target="_blank" rel="noopener">here</a>.
-                        </p>
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="project-info-wrapper">
-                        <p class="project__name">UniRide 🚗</p>
-                        <p class="project__info__text">
-                            This is a school project I and a team worked on designing the User Interface for a ride sharing service for students.
-                            We carried out User Research, prototyping and User Testing in order to come up with a UI which can be viewed
-                            <a href="https://www.figma.com/proto/sgP8tMx0fT1ibQnUhHPFtK/Uniride-App-V2?node-id=2%3A1&scaling=scale-down" target="_blank" rel="noopener">here</a>.
                         </p>
                     </div>
                 </div>
