update work status

--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
         <section id="about">
             <h2 class="section__header">ABOUT ME</h2>
             <p class="about__text">
-                I am <b>Atauba Prince Mfon</b>. I am a Software Developer.
-                I love using technologies such as Javascript (React, Angular and Node) to make the web accessible to users by developing web applications.
-                I am also interested in Mobile Technologies such as Dart/Flutter.
-                I am a graduate of Middlesex University and also an intern at <a href="https://oilserv.com/" target="_blank" rel="noopener" class="intern-at">OilServ</a>. I am also a Real Madrid fan by day and a Real Madrid fan by night.
+                I am <b>Atauba Prince Mfon</b>. I am a Software Developer at <a href="http://www.addenda.tech" target="_blank" rel="noopener" class="dev-at">Addenda</a>. I am also a Real Madrid fan by day and a Real Madrid fan by night.
             </p>
         </section>
         <section id="works">
@@ -108,10 +105,10 @@
             <h2 class="section__header">WANT TO CONTACT ME?</h2>
             <p class="contact__text">
                 You can find me on <a href="https://twitter.com/achowba_" target="_blank" rel="noopener">twitter</a>
-                or <a href="https://www.linkedin.com/in/achowba/" target="_blank" rel="noopener">linkedin</a>.
+                or <a href="https://www.linkedin.com/in/achowba/" target="_blank" rel="noopener">linkedin</a>. <br>
                 Look at my projects on <a href="https://github.com/achowba" target="_blank" rel="noopener">github</a>.
-                See my writings on <a href="https://dev.to/achowba" target="_blank" rel="noopener">dev.to</a>
-                or view my pictures on <a href="https://vsco.co/achowba" target="_blank" rel="noopener">vsco</a> or <a href="https://instagram.com/achowba" target="_blank" rel="noopener">instagram.</a>
+                Sometimes I write on <a href="https://dev.to/achowba" target="_blank" rel="noopener">dev.to</a>. <br>
+                View my pictures on <a href="https://vsco.co/achowba" target="_blank" rel="noopener">vsco</a> or <a href="https://instagram.com/achowba" target="_blank" rel="noopener">instagram.</a> <br>
                 Just send a <a href="mailto:princeatauba@gmail.com" target="_blank" rel="noopener">raven.</a>
             </p>
         </section>
