--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="project">
+                <!-- <div class="project">
                     <div class="project-info-wrapper">
                         <p class="project__name">UniRide 🚗</p>
                         <p class="project__info__text">
@@ -71,7 +71,7 @@
                             <a href="https://www.figma.com/proto/sgP8tMx0fT1ibQnUhHPFtK/Uniride-App-V2?node-id=2%3A1&scaling=scale-down" target="_blank" rel="noopener">here</a>.
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <div class="project">
                     <div class="project-info-wrapper">
                         <p class="project__name">Sported ⚽</p>
