remove resume and projects

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="page-wrapper">
-        <div class="toggle-button">
+        <div class="toggle-button" id="toggleButton">
             <div class="checkbox">
                 <input id="toggleDarkMode" type="checkbox"/>
                 <label></label>
@@ -30,76 +30,12 @@
             <div class="logo-wrapper">
                 <img src="assets/img/logo_dark.png" id="logo" alt="achowba">
             </div>
-            <div class="menu">
-                <ul class="menu-list">
-                    <li><a href="assets/docs/Prince_Atauba_-_Web_Developer.pdf" target="_blank" rel="noopener">RESUME</a></li>
-                </ul>
-            </div>
         </section>
         <section id="about">
             <h2 class="section__header">ABOUT ME</h2>
             <p class="about__text">
-                I am <b>Atauba Prince Mfon</b>. I am a Software Developer at <a href="http://www.addenda.tech" target="_blank" rel="noopener" class="dev-at">Addenda</a>. I am also a Real Madrid fan by day and a Real Madrid fan by night.
+                I am <b>Atauba Prince</b>. A Software Developer at <a href="https://www.addenda.tech" target="_blank" rel="noopener" class="dev-at">Addenda</a>. I am also a Real Madrid fan by day and a Real Madrid fan by night.
             </p>
-        </section>
-        <section id="works">
-            <h2 class="section__header">WHAT I HAVE DONE?</h2>
-            <div class="projects">
-                <div class="project">
-                    <div class="project-info-wrapper">
-                        <p class="project__name">Planit 📋</p>
-                        <p class="project__info__text">
-                            A todo app made with Node JS, Express, Angular and MongoDB. It is hosted <a href="https://plahnit.herokuapp.com/" target="_blank" rel="noopener">here</a>.
-                        </p>
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="project-info-wrapper">
-                        <p class="project__name">Pause and Play 📺</p>
-                        <p class="project__info__text">
-                            A Google Chrome extension that automatically pauses a YouTube video when the tab is switched or browser is minimized and plays it when the tab is back in focus.
-                            Download it <a href="https://chrome.google.com/webstore/detail/pause-and-play/pcmpjndicegnhilonlfbjcpmgaecedoa" target="_blank" rel="noopener">here</a>.
-                        </p>
-                    </div>
-                </div>
-                <!-- <div class="project">
-                    <div class="project-info-wrapper">
-                        <p class="project__name">UniRide 🚗</p>
-                        <p class="project__info__text">
-                            This is a school project I and a team worked on designing the User Interface for a ride sharing service for students.
-                            We carried out User Research, prototyping and User Testing in order to come up with a UI which can be viewed
-                            <a href="https://www.figma.com/proto/sgP8tMx0fT1ibQnUhHPFtK/Uniride-App-V2?node-id=2%3A1&scaling=scale-down" target="_blank" rel="noopener">here</a>.
-                        </p>
-                    </div>
-                </div> -->
-                <div class="project">
-                    <div class="project-info-wrapper">
-                        <p class="project__name">Sported ⚽</p>
-                        <p class="project__info__text">
-                            A football news app built with React JS and <a href="https://newsapi.org/" target="_blank" rel="noopener">the News API</a>. It is hosted <a href="https://softsport.herokuapp.com/" target="_blank" rel="noopener">here</a> and source code is
-                            <a href="https://github.com/achowba/sported" target="_blank" rel="noopener">here</a>.
-                        </p>
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="project-info-wrapper">
-                        <p class="project__name">P8ntr 🖌</p>
-                        <p class="project__info__text">
-                            A painting webpage built with HTML5 Canvas API. Learnt from <a href="https://javascript30.com/">Wes Bos's Javascript 30 Course</a>. Take a look at it <a href="https://achowba.github.io/p8ntr/index.html" target="_blank">here</a>.
-                        </p>
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="project-info-wrapper">
-                        <p class="project__name">Sonos 🎶</p>
-                        <p class="project__info__text">
-                            A web application built with React JS that consumes data from a JSON file.
-                            It is hosted <a href="https://gbedu.herokuapp.com/" target="_blank" rel="noopener">here</a> and take a look at the source code
-                            <a href="https://github.com/achowba/sonos" target="_blank" rel="noopener">here</a>.
-                        </p>
-                    </div>
-                </div>
-            </div>
         </section>
         <section id="contacts">
             <h2 class="section__header">WANT TO CONTACT ME?</h2>
