--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, minimum-scale=1.0">
+    <meta name="description" content="The life and times of achowba.">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/pwa/apple-touch-icon.png">
@@ -16,19 +17,21 @@
     <link rel="icon" href="assets/img/favicon.ico">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- <link href="https://fonts.googleapis.com/css?family=Tajawal:300,400,500,700,800&display=swap" rel="stylesheet"> -->
+
     <title>achowba 👑</title>
 </head>
 <body>
     <div class="page-wrapper">
         <div class="toggle-button" id="toggleButton">
             <div class="checkbox">
-                <input id="toggleDarkMode" type="checkbox"/>
+                <input id="toggleDarkMode" aria-label="toggle-dark-mode" type="checkbox"/>
                 <label></label>
             </div>
         </div>
         <section id="header">
             <div class="logo-wrapper">
-                <img src="assets/img/logo_dark.png" id="logo" alt="achowba">
+                <img src="assets/img/logo_dark.png" id="logo" alt="dark logo image">
             </div>
         </section>
         <section id="about">
