Added link to projects

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             <p class="contact__text">
                 You can find me on <a href="https://twitter.com/achowba_" target="_blank" rel="noopener">twitter</a>
                 or <a href="https://www.linkedin.com/in/achowba/" target="_blank" rel="noopener">linkedin</a>. <br>
-                Look at my projects on <a href="https://github.com/achowba" target="_blank" rel="noopener">github</a>.
+                Look at my projects on <a href="https://github.com/achowba" target="_blank" rel="noopener">github</a> or
+                <a href="https://projects.achowba.dev/" target="_blank" rel="noopener">here</a>.
                 Sometimes I write on <a href="https://dev.to/achowba" target="_blank" rel="noopener">dev.to</a>. <br>
                 View my pictures on <a href="https://vsco.co/achowba" target="_blank" rel="noopener">vsco</a> or <a href="https://instagram.com/achowba" target="_blank" rel="noopener">instagram.</a> <br>
                 Just send a <a href="mailto:princeatauba@gmail.com" target="_blank" rel="noopener">raven.</a>
