Removed corny text

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
         <section id="about">
             <h2 class="section__header">ABOUT ME</h2>
             <p class="about__text">
-                I am <b>Prince</b>. A Software Developer at <a href="https://joinhala.com/" target="_blank" rel="noopener" class="dev-at">hala</a>. I am also a Real Madrid fan by day and a Real Madrid fan by night.
-                <br><br>
-                There's also not much about me. I make <b>!bad</b> jokes, 20% of the people I've met think I'm funny, the other 80% know I'm funny.
+                I am <b>Prince</b>. A Software Developer at <a href="https://joinhala.com/" target="_blank" rel="noopener" class="dev-at">hala</a>.
             </p>
         </section>
         <section id="contacts">
