Added Google tag

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 
     <title>achowba 👑</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4Q0TJ2ZDKB"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-4Q0TJ2ZDKB');
+</script>
 <body>
     <div class="page-wrapper">
         <div class="toggle-button" id="toggleButton">
@@ -31,7 +40,7 @@
         </div>
         <section id="header">
             <div class="logo-wrapper">
-                <img src="assets/img/logo_dark.png" id="logo-dark" alt="dark logo image"  style="display: none;">
+                <img src="assets/img/logo_dark.png" id="logo-dark" alt="dark logo image" style="display: none;">
                 <img src="assets/img/logo_light.png" id="logo-light" alt="dark logo image">
             </div>
         </section>
