--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4Q0TJ2ZDKB"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-4Q0TJ2ZDKB"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-4Q0TJ2ZDKB');
-    </script>
+    </script> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="The life and times of achowba.">
@@ -66,6 +66,7 @@
         </section>
     </div>
 
+    <script defer src="/_vercel/insights/script.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
