--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <title>achowba 👑</title>
 </head>
 <body>
-    <div class="page-wrapper">
-        <div class="toggle-button" id="toggleButton">
+    <main class="page-wrapper">
+        <section class="toggle-button" id="toggleButton">
             <div class="checkbox">
                 <input id="toggleDarkMode" aria-label="toggle-dark-mode" type="checkbox" />
                 <label></label>
             </div>
-        </div>
+        </section>
         <section id="header">
             <div class="logo-wrapper">
                 <img src="assets/img/logo_dark.png" id="logo-dark" alt="dark logo image" style="display: none;">
@@ -47,8 +47,8 @@
         <section id="about">
             <h2 class="section__header">ABOUT ME</h2>
             <p class="about__text">
-                I am <b>Prince 👑</b>. A Software Developer at <a href="https://joinhala.com/" target="_blank"
-                    rel="noopener" class="dev-at">hala</a>.
+                I am <b>Prince 👑</b>. A Software Developer at <a href="https://savewithleap.com" target="_blank"
+                    rel="noopener" class="dev-at">Leap</a>.
             </p>
         </section>
         <section id="contacts">
@@ -56,15 +56,21 @@
             <p class="contact__text">
                 You can find me on <a href="https://twitter.com/achowba_" target="_blank" rel="noopener">twitter</a>
                 or <a href="https://www.linkedin.com/in/achowba/" target="_blank" rel="noopener">linkedin</a>. <br>
+
                 Look at my projects on <a href="https://github.com/achowba" target="_blank" rel="noopener">github</a>
                 or <a href="https://projects.achowba.dev/" target="_blank" rel="noopener">here</a>.
+
                 Sometimes I write on <a href="https://dev.to/achowba" target="_blank" rel="noopener">dev.to</a>. <br>
                 View my pictures on <a href="https://vsco.co/achowba/gallery" target="_blank" rel="noopener">vsco</a>
-                or <a href="https://instagram.com/achowba" target="_blank" rel="noopener">instagram.</a> <br>
-                Just send a <a href="mailto:princeatauba@gmail.com" target="_blank" rel="noopener">raven 🦅.</a>
+                or <a href="https://instagram.com/achowba" target="_blank" rel="noopener">instagram.</a>
+                <br>
+            </p>
+            <p class="contact__text">
+                Just send a <a href="mailto:princeatauba@gmail.com" target="_blank" rel="noopener">raven 🦅.</a> You can
+                view my resume <a href="https://resume.io/r/Hd5dr8HXr" target="_blank" rel="noopener">here</a>.
             </p>
         </section>
-    </div>
+    </main>
 
     <script defer src="/_vercel/insights/script.js"></script>
     <script src="assets/js/script.js"></script>
